# opendesk

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  automation.md  index.md  integrations.md  learn.md  mcp.md  protocol.md  quickstart.md  remote-js.md  remote.md  tools.md
docs/architecture/: custom-tools.md  data-flow.md  index.md  layers.md  protocol-layer.md  remote-layer.md
docs/automation/: claude-code.md  index.md  python-api.md  scheduler.md
docs/getting-started/: index.md  javascript.md  python.md
docs/integrations/: anthropic.md  custom.md  index.md  javascript.md  langchain.md  openai.md
docs/mcp/: advanced.md  claude-code.md  claude-desktop.md  continue.md  cursor.md  index.md  install.md  troubleshooting.md
docs/protocol/: auth.md  discovery.md  encryption.md  frames.md  index.md  pairing.md  session.md  transport.md
docs/remote/: cli.md  concurrency.md  index.md  mcp.md  programmatic.md  running.md  security.md  service.md  setup.md  troubleshooting.md
docs/remote-js/: audit.md  cli.md  concurrency.md  index.md  mcp.md  programmatic.md  running.md  security.md  setup.md  troubleshooting.md
docs/tools/: app.md  audit.md  clipboard.md  index.md  keyboard.md  learn.md  mouse.md  ocr.md  screenshot.md  ui.md
js/: README.md  package.json
js/src/: cli.ts  client.ts  index.ts  install.ts  mcp.ts  registry.ts  types.ts
opencua/: __init__.py  registry.py
opencua/computer/: __init__.py  capture.py  deps.py  ocr.py  sandbox.py
opencua/integrations/: __init__.py  claude_code.py  langchain_compat.py  mcp.py  openai_compat.py
opencua/tools/: __init__.py  app.py  base.py  clipboard.py  keyboard.py  mouse.py  ocr.py  screenshot.py  ui.py
opendesk/: __init__.py  cli.py  registry.py  wsl.py
opendesk/app/: app.py
opendesk/computer/: __init__.py  dispatcher.py  local.py  marks.py  ocr.py  remote.py  types.py
opendesk/integrations/: __init__.py  mcp.py  mcp_session.py
opendesk/learn/: __init__.py  recorder.py  storage.py  trajectory.py
opendesk/protocol/: codec.py  frames.py  peer.py
opendesk/remote/: __init__.py  audit.py  client.py  discovery.py  policy.py  server.py
opendesk/schedule/: __init__.py  daemon.py  runner.py
opendesk/tools/: __init__.py  audit.py  automation.py  keyboard.py  learn.py  mouse.py  schedule.py  screenshot.py  ui.py
paper/: opendesk.bib  opendesk.tex
python/: README.md  pyproject.toml
python/opendesk/: __init__.py  __main__.py  cli.py  registry.py
tests/: test_app.py  test_base.py  test_eviction.py  test_mcp.py  test_remote.py  test_server_e2e.py  test_service.py  test_wsl.py
(+96 files in other folders)
